crates/bsql/tests/compile_fail/invalid_column.stderr
error: PostgreSQL error: relation "users" does not exist (at position 36)
                SQL: SELECT nonexistent_column_xyz FROM users WHERE id = $1
                                                        ^
         available tables: bench_orders, bench_users
 --> tests/compile_fail/invalid_column.rs:3:13
  |
3 |       let _ = bsql::query!(
  |  _____________^
4 | |         "SELECT nonexistent_column_xyz FROM users WHERE id = $id: i32"
5 | |     );
  | |_____^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
